--- a/QuickNetChat.Client/QuickNetChat.Client.csproj
+++ b/QuickNetChat.Client/QuickNetChat.Client.csproj
@@ -38,6 +38,8 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -50,14 +52,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SplashScreen.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SplashScreen.Designer.cs">
-      <DependentUpon>SplashScreen.cs</DependentUpon>
-    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,9 +65,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SplashScreen.resx">
-      <DependentUpon>SplashScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -103,6 +97,18 @@
     <ProjectReference Include="..\QuickNetChat.Server\QuickNetChat.Server.csproj">
       <Project>{c2ae21e3-d85c-4dab-815b-fa7cfef9fae4}</Project>
       <Name>QuickNetChat.Server</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuickNetChat.View.Browse\QuickNetChat.View.Browse.csproj">
+      <Project>{4a28626c-8bb9-4f9b-b753-4433934d55ce}</Project>
+      <Name>QuickNetChat.View.Browse</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuickNetChat.View.Chat\QuickNetChat.View.Chat.csproj">
+      <Project>{736bfe43-8425-4626-98a7-04ac699550e4}</Project>
+      <Name>QuickNetChat.View.Chat</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuickNetChat.View.SplashScreen\QuickNetChat.View.SplashScreen.csproj">
+      <Project>{f1beaf32-1b70-4769-bc23-d4840125cede}</Project>
+      <Name>QuickNetChat.View.SplashScreen</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
