--- a/QuickNetChat.View.Main/QuickNetChat.View.Main.csproj
+++ b/QuickNetChat.View.Main/QuickNetChat.View.Main.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4A28626C-8BB9-4F9B-B753-4433934D55CE}</ProjectGuid>
+    <ProjectGuid>{AC7C044C-EBE7-4753-8330-ED512F8A5799}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>QuickNetChat.View.Browse</RootNamespace>
-    <AssemblyName>QuickNetChat.View.Browse</AssemblyName>
+    <RootNamespace>QuickNetChat.View.Main</RootNamespace>
+    <AssemblyName>QuickNetChat.View.Main</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
