--- a/QuickNetChat.Control.Server/QuickNetChat.Control.Server.csproj
+++ b/QuickNetChat.Control.Server/QuickNetChat.Control.Server.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{72F7F5DD-D42D-4FC5-884D-A92ABDBA3BC3}</ProjectGuid>
+    <ProjectGuid>{C2AE21E3-D85C-4DAB-815B-FA7CFEF9FAE4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuickNetChat.DataRepository</RootNamespace>
-    <AssemblyName>QuickNetChat.DataRepository</AssemblyName>
+    <RootNamespace>QuickNetChat.Control.Server</RootNamespace>
+    <AssemblyName>QuickNetChat.Control.Server</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,6 +29,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
@@ -39,6 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,21 +51,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataConsts.cs" />
-    <Compile Include="DataContext.cs" />
-    <Compile Include="DataRepository.cs" />
-    <Compile Include="Entitys\EntityBase.cs" />
-    <Compile Include="Entitys\Media.cs" />
-    <Compile Include="Entitys\Channel.cs" />
-    <Compile Include="Entitys\User.cs" />
-    <Compile Include="Entitys\Message.cs" />
-    <Compile Include="Enums\MediaType.cs" />
+    <Compile Include="LocalServer.cs" />
+    <Compile Include="ServerHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\QuickNetChat.Data.DataRepository\QuickNetChat.Data.DataRepository.csproj">
+      <Project>{72f7f5dd-d42d-4fc5-884d-a92abdba3bc3}</Project>
+      <Name>QuickNetChat.DataRepository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
